--- a/home.html
+++ b/home.html
@@ -319,18 +319,18 @@ function setup() {
   teamNumbers = getPickNumbers();
 
   teamNamesMap = {
-    "Team 1"  :  "Big Baller Brown",
-    "Team 2"  :  "Team Synchro",
-    "Team 3"  :  "Seoul Lights (from Luzern)",
-    "Team 4"  :  "Big Baller Brown (from Scranton)",
-    "Team 5"  :  "Wolf Wall (from Seoul)",
-    "Team 6"  :  "Team Droptop (from Richmond)",
-    "Team 7"  :  "Team Droptop (from Wall)",
-    "Team 8"  :  "Seoul Lights (from Droptop)",
-    "Team 9"  :  "Nuclear Guam",
-    "Team 10" :  "Big Baller Brown (from TCAT)",
+    "Team 1"  :  "Wolf Wall (from Seoul)",
+    "Team 2"  :  "Big Baller Brown",
+    "Team 3"  :  "Tysons Traffic (from Richmond)",
+    "Team 4"  :  "Luzern's Iron Chef",
+    "Team 5"  :  "Wolf Wall",
+    "Team 6"  :  "Boston Jellyfam",
+    "Team 7"  :  "Nuclear Guam",
+    "Team 8"  :  "Big Baller Brown (from Scranton)",
+    "Team 9"  :  "Big Baller Brown (from Synchro)",
+    "Team 10" :  "Seoul Lights (from Droptop)",
     "Team 11" :  "Big Baller Brown (from Tysons)",
-    "Team 12" :  "Boston Jellyfam"
+    "Team 12" :  "Wolf Wall (from Tompkins)"
   };
 
   teamOddsMap = {
