TCAT 1st rounder traded to Droptop

--- a/home.html
+++ b/home.html
@@ -327,7 +327,7 @@ function setup() {
     "Team 6"  :  "Big Baller Brown (from Scranton)",
     "Team 7"  :  "Nuclear Guam",
     "Team 8"  :  "Big Baller Brown (from Synchro",
-    "Team 9"  :  "Tompkins CAT",
+    "Team 9"  :  "Team Droptop",
     "Team 10" :  "Scranton Stranglers (from Seoul)",
     "Team 11" :  "Wolf Wall",
     "Team 12" :  "Luzern's Iron Chef (from Droptop)"
