--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <html>
 <title>Draft Lottery</title>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -195,7 +196,7 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
-      font-size: min(18px, 2vmax);
+      font-size: min(18px, 2vw);
       padding-bottom: 20px;
     }
 
@@ -209,13 +210,13 @@
     .single-list-wrapper
     {
       width: 100%;
-      font-size: min(14px, 1.6vmax);
+      font-size: min(14px, 1.6vw);
       font-weight: 700;
     }
 
     .team-span-wrapper
     {
-      font-size: min(12px, 1.4vmax);
+      font-size: min(12px, 1.4vw);
       font-weight: normal;
     }
 
