--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <html>
 <title>Draft Lottery</title>
 <head>
-  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>   
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>   
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <!-- Load the d3 library. -->
@@ -195,7 +196,7 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
-      font-size: min(18px, 2vmax);
+      font-size: min(18px, 2vw);
       padding-bottom: 20px;
     }
 
@@ -209,13 +210,13 @@
     .single-list-wrapper
     {
       width: 100%;
-      font-size: min(14px, 1.6vw);
+      font-size: min(18px, 1.8vw);
       font-weight: 700;
     }
 
     .team-span-wrapper
     {
-      font-size: min(12px, 1.4vw);
+      font-size: min(15px, 1.6vw);
       font-weight: normal;
     }
 
