--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <html>
 <title>Draft Lottery</title>
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <!-- Latest compiled and minified CSS -->
