Adjusting viewport element sizing

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
 <html>
 <title>Draft Lottery</title>
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <!-- Latest compiled and minified CSS -->
@@ -37,7 +38,7 @@
       cursor: pointer;
       width: fit-content;
       text-align: center;
-      font-size: min(12px, 1.5vmin);
+      font-size: min(14px, 1.8vmin);
       font-weight: 700;
 
       background-color: #FFFFFF;
@@ -154,13 +155,13 @@
 
     .title
     {
-      font-size: min(30px, 3vmax);
+      font-size: min(36px, 3.6vmin);
       font-weight: 900;
     }
 
     .subtitle
     {
-      font-size: min(16px, 2vmax);
+      font-size: min(18px, 2.4vmin);
     }
 
     .lottery-wrapper
@@ -189,7 +190,7 @@
     {
       display: flex;
       justify-content: center;
-      padding-top: min(15px, 2vh);
+      padding-top: min(15px, 2vmin);
     }
 
     .caption
@@ -197,7 +198,7 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
-      font-size: min(18px, 2vw);
+      font-size: min(21px, 2.6vmin);
       padding-bottom: 20px;
     }
 
@@ -211,13 +212,13 @@
     .single-list-wrapper
     {
       width: 100%;
-      font-size: min(14px, 1.6vw);
+      font-size: min(21px, 2.6vmin);
       font-weight: 700;
     }
 
     .team-span-wrapper
     {
-      font-size: min(12px, 1.4vw);
+      font-size: min(18px, 2.3vmin);
       font-weight: normal;
     }
 
