--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link rel="shortcut icon" href="#">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>   
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -37,7 +38,7 @@
       cursor: pointer;
       width: fit-content;
       text-align: center;
-      font-size: min(12px, 1.5vmin);
+      font-size: min(14px, 1.8vmin);
       font-weight: 700;
 
       background-color: #FFFFFF;
@@ -154,13 +155,13 @@
 
     .title
     {
-      font-size: min(30px, 3vmax);
+      font-size: min(36px, 3.6vmin);
       font-weight: 900;
     }
 
     .subtitle
     {
-      font-size: min(16px, 2vmax);
+      font-size: min(18px, 2.4vmin);
     }
 
     .lottery-wrapper
@@ -189,7 +190,7 @@
     {
       display: flex;
       justify-content: center;
-      padding-top: min(15px, 2vh);
+      padding-top: min(15px, 2vmin);
     }
 
     .caption
@@ -197,7 +198,7 @@
       display: flex;
       justify-content: center;
       padding-top: 20px;
-      font-size: min(18px, 2vw);
+      font-size: min(21px, 2.6vmin);
       padding-bottom: 20px;
     }
 
@@ -211,13 +212,13 @@
     .single-list-wrapper
     {
       width: 100%;
-      font-size: min(18px, 1.8vw);
+      font-size: min(21px, 2.6vmin);
       font-weight: 700;
     }
 
     .team-span-wrapper
     {
-      font-size: min(15px, 1.6vw);
+      font-size: min(18px, 2.3vmin);
       font-weight: normal;
     }
 
