--- a/index.html
+++ b/index.html
@@ -241,31 +241,31 @@
         transform: translateY(-600px);
         opacity: 0;
         font-weight: 400;
-        font-size: min(14px, 1.6vmax);
+        font-size: min(20px, 2.4vmin);
       }
-      30% {
+      25% {
         transform: translateY(-300px);
         opacity: 0;
         font-weight: 400;
-        font-size: min(17px, 2.0vmax);
+        font-size: min(23px, 2.6vmin);
       }
       50% {
         transform: translateY(0px);
         opacity: 1;
         font-weight: 400;
-        font-size: min(20px, 2.2vmax);
+        font-size: min(23px, 2.6vmin);
       }
       75% {
         transform: translateY(-40px);
         opacity: 1;
         font-weight: 700;
-        font-size: min(20px, 2.2vmax);
+        font-size: min(26px, 2.9vmin);
       }
       100% {
         transform: translateY(0px);
         opacity: 1;
         font-weight: 900;
-        font-size: min(12px, 1.4vmax);
+        font-size: min(18px, 2.3vmin);
       }
     }
 
