--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       cursor: pointer;
       width: fit-content;
       text-align: center;
-      font-size: min(14px, 1.8vmin);
+      font-size: min(15px, 1.9vmin);
       font-weight: 700;
 
       background-color: #FFFFFF;
@@ -75,6 +75,7 @@
       margin: auto;
       text-align: center;
       border: 1px solid #20398C;
+      color: #20398C;
     }
 
     .roll-button:hover
